Replace Supabase with Neon serverless Postgres across the entire stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: '3.8'
-
 services:
-  # PostgreSQL Database (local development only - use Supabase in production)
+  # PostgreSQL Database (local development only - use Neon in production)
   postgres:
     image: postgres:15-alpine
     container_name: finopt-postgres
