--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,13 +9,9 @@ API_HOST=0.0.0.0
 API_PORT=8000
 API_RELOAD=True
 
-# Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-
-# Database (Supabase Postgres)
-DATABASE_URL=postgresql://postgres:password@db.your-project.supabase.co:5432/postgres
+# Neon Database
+DATABASE_URL=postgresql://username:password@your-project.neon.tech/neondb?sslmode=require
+NEON_PROJECT_ID=your-neon-project-id
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
