--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -8,9 +8,8 @@ asyncpg==0.29.0
 alembic==1.13.1
 sqlalchemy==2.0.25
 
-# Supabase
-supabase==2.4.0
-postgrest==0.16.0
+# Database client (using asyncpg for Neon/Postgres)
+# No additional packages needed - asyncpg handles connection
 
 # Validation
 pydantic==2.6.1
@@ -19,7 +18,8 @@ email-validator==2.1.0.post1
 
 # Authentication
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+argon2-cffi>=23.1.0
 
 # Workers
 celery==5.3.6
@@ -29,23 +29,22 @@ redis==5.0.1
 anthropic==0.18.1
 
 # File parsing
-pandas==2.2.0
-tabula-py==2.9.0
-PyPDF2==3.0.1
-ofxparse==0.21
+pandas>=2.0.0
+tabula-py>=2.9.0
+PyPDF2>=3.0.1
+ofxparse>=0.21
 
 # HTTP client
-httpx==0.26.0
+httpx==0.27.0
 
 # Utilities
 python-dotenv==1.0.1
 structlog==24.1.0
 
 # Testing
-pytest==8.0.0
+pytest==7.4.4
 pytest-asyncio==0.23.4
 pytest-cov==4.1.0
-httpx==0.26.0
 
 # Code quality
 black==24.2.0
