--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,9 +1,8 @@
 # API Configuration
 API_URL=http://localhost:8000/api/v1
 
-# Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
+# Backend API handles database connection via Neon
+# No direct database access from mobile app
 
 # App Configuration
 APP_ENV=development
