--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,36 +13,35 @@
   },
   "dependencies": {
     "@finopt/shared": "*",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "expo": "~50.0.0",
-    "expo-constants": "~15.4.0",
-    "expo-font": "~11.10.0",
-    "expo-linking": "~6.2.0",
-    "expo-notifications": "~0.27.0",
-    "expo-router": "~3.4.0",
-    "expo-splash-screen": "~0.26.0",
-    "expo-status-bar": "~1.11.0",
-    "react": "18.2.0",
-    "react-native": "0.73.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "victory-native": "^36.9.1",
-    "zustand": "^4.5.0",
-    "zod": "^3.22.4",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.6.5",
-    "date-fns": "^3.3.1"
+    "date-fns": "^3.3.1",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
+    "expo-linking": "~8.0.10",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.20",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "victory-native": "^36.9.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
+    "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
-    "eslint-config-expo": "^7.0.0",
+    "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
     "typescript": "^5.3.3"
   },
